--- a/template.yml
+++ b/template.yml
@@ -5,7 +5,7 @@ Parameters:
   GitHubToken:
     Type: String
     NoEcho: true
-    Description: 
+    Description: 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
 
 Resources:
   # S3 Bucket for artifacts
