--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,18 +2,20 @@ version: 0.2
 
 env:
   variables:
-    STACK_NAME: MyCodePipelineStack    # 👈 name for the CloudFormation stack
-    TEMPLATE_FILE: template.yaml       # 👈 your CloudFormation file name
+    STACK_NAME: MyCodePipelineStack    # Name for the CloudFormation stack
+    TEMPLATE_FILE: template.yaml       # CloudFormation file name
 
 phases:
   install:
     commands:
       - echo "🔧 Installing AWS CLI..."
       - pip install --upgrade awscli
+
   pre_build:
     commands:
       - echo "🔍 Validating CloudFormation template..."
       - aws cloudformation validate-template --template-body file://$TEMPLATE_FILE
+
   build:
     commands:
       - echo "🚀 Deploying CloudFormation stack: $STACK_NAME"
@@ -22,10 +24,14 @@ phases:
           --stack-name $STACK_NAME \
           --capabilities CAPABILITY_NAMED_IAM \
           --no-fail-on-empty-changeset
+
   post_build:
     commands:
       - echo "✅ Deployment complete!"
-      - aws cloudformation describe-stacks --stack-name $STACK_NAME --query "Stacks[0].StackStatus" --output text
+      - aws cloudformation describe-stacks \
+          --stack-name $STACK_NAME \
+          --query "Stacks[0].StackStatus" \
+          --output text
 
 artifacts:
   files:
