--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 
 env:
   variables:
-    STACK_NAME: MyCodePipelineStack    # Name for the CloudFormation stack
-    TEMPLATE_FILE: template.yaml       # CloudFormation file name
+    STACK_NAME: MyCodePipelineStack
+    TEMPLATE_FILE: template.yaml
 
 phases:
   install:
@@ -19,7 +19,8 @@ phases:
   build:
     commands:
       - echo "🚀 Deploying CloudFormation stack: $STACK_NAME"
-      - aws cloudformation deploy \
+      - |
+        aws cloudformation deploy \
           --template-file $TEMPLATE_FILE \
           --stack-name $STACK_NAME \
           --capabilities CAPABILITY_NAMED_IAM \
