--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,22 +8,22 @@ env:
 phases:
   install:
     commands:
-      - echo "🔧 Installing AWS CLI..."
+      - echo "Installing AWS CLI..."
       - pip install --upgrade awscli
 
   pre_build:
     commands:
-      - echo "🔍 Validating CloudFormation template..."
+      - echo "Validating CloudFormation template..."
       - aws cloudformation validate-template --template-body file://$TEMPLATE_FILE
 
   build:
     commands:
-      - echo "🚀 Deploying CloudFormation stack: $STACK_NAME"
+      - echo "Deploying CloudFormation stack: $STACK_NAME"
       - aws cloudformation deploy --template-file $TEMPLATE_FILE --stack-name $STACK_NAME --capabilities CAPABILITY_NAMED_IAM --no-fail-on-empty-changeset
 
   post_build:
     commands:
-      - echo "✅ Deployment complete!"
+      - echo "Deployment complete!"
       - aws cloudformation describe-stacks --stack-name $STACK_NAME --query "Stacks[0].StackStatus" --output text
 
 artifacts:
