--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,12 +15,7 @@ phases:
   build:
     commands:
       - echo "Deploying CloudFormation stack: $STACK_NAME"
-      - >
-        aws cloudformation deploy
-        --template-file $TEMPLATE_FILE
-        --stack-name $STACK_NAME
-        --capabilities CAPABILITY_NAMED_IAM
-        --no-fail-on-empty-changeset
+      - aws cloudformation deploy --template-file $TEMPLATE_FILE --stack-name $STACK_NAME --capabilities CAPABILITY_NAMED_IAM --no-fail-on-empty-changeset
   post_build:
     commands:
       - echo "Deployment complete!"
