--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,8 +13,8 @@ phases:
   
   pre_build:
     commands:
-      - echo "Validating CloudFormation template..."
-      - aws cloudformation validate-template --template-body file://$TEMPLATE_FILE
+      - echo "Pre-build phase"
+      - ls -la
   
   build:
     commands:
