--- a/template.yml
+++ b/template.yml
@@ -1,11 +1,12 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'Simple CodePipeline and CodeBuild setup'
+Description: 'CodePipeline + CodeBuild setup with proper IAM permissions'
 
 Parameters:
   GitHubToken:
     Type: String
     NoEcho: true
     Description: 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
+
 
 Resources:
   # S3 Bucket for artifacts
@@ -32,6 +33,7 @@ Resources:
                 Action:
                   - s3:*
                   - codebuild:*
+                  - cloudwatch:*
                 Resource: '*'
 
   # CodeBuild Role
@@ -55,6 +57,8 @@ Resources:
                   - logs:*
                   - s3:*
                   - ecr:*
+                  - cloudformation:*
+                  - iam:*
                 Resource: '*'
 
   # CodeBuild Project
