--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -18,19 +18,12 @@ phases:
   build:
     commands:
       - echo "Deploying CloudFormation stack..."
-      - aws cloudformation deploy \
-          --template-file $TEMPLATE_FILE \
-          --stack-name $STACK_NAME \
-          --capabilities CAPABILITY_NAMED_IAM \
-          --debug
+      - aws cloudformation deploy --template-file $TEMPLATE_FILE --stack-name $STACK_NAME --capabilities CAPABILITY_NAMED_IAM --debug
 
   post_build:
     commands:
       - echo "Deployment complete!"
-      - aws cloudformation describe-stacks \
-          --stack-name $STACK_NAME \
-          --query "Stacks[0].StackStatus" \
-          --output text
+      - aws cloudformation describe-stacks --stack-name $STACK_NAME --query "Stacks[0].StackStatus" --output text
 
 artifacts:
   files:
