--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,24 +7,20 @@ phases:
   install:
     commands:
       - echo "Using built-in AWS CLI v2"
+      - aws --version
   pre_build:
     commands:
       - echo "Pre-build phase"
       - ls -la
-      # Check stack status and handle REVIEW_IN_PROGRESS state
+      - echo "Validating CloudFormation template..."
+      - aws cloudformation validate-template --template-body file://$TEMPLATE_FILE
       - |
         echo "Checking stack status..."
         STACK_STATUS=$(aws cloudformation describe-stacks --stack-name $STACK_NAME --query "Stacks[0].StackStatus" --output text 2>/dev/null || echo "DOES_NOT_EXIST")
         echo "Current stack status: $STACK_STATUS"
         
-        if [ "$STACK_STATUS" = "REVIEW_IN_PROGRESS" ]; then
-          echo "Stack is stuck in REVIEW_IN_PROGRESS state. Deleting stack..."
-          aws cloudformation delete-stack --stack-name $STACK_NAME
-          echo "Waiting for stack deletion to complete..."
-          aws cloudformation wait stack-delete-complete --stack-name $STACK_NAME
-          echo "Stack deleted successfully"
-        elif [ "$STACK_STATUS" = "ROLLBACK_COMPLETE" ] || [ "$STACK_STATUS" = "CREATE_FAILED" ]; then
-          echo "Stack is in a failed state ($STACK_STATUS). Deleting stack..."
+        if [ "$STACK_STATUS" != "DOES_NOT_EXIST" ]; then
+          echo "Stack exists. Deleting to ensure clean deployment..."
           aws cloudformation delete-stack --stack-name $STACK_NAME
           echo "Waiting for stack deletion to complete..."
           aws cloudformation wait stack-delete-complete --stack-name $STACK_NAME
@@ -32,13 +28,16 @@ phases:
         fi
   build:
     commands:
-      - echo "Deploying CloudFormation stack..."
+      - echo "Creating CloudFormation stack using create-stack..."
       - |
-        aws cloudformation deploy \
-          --template-file $TEMPLATE_FILE \
+        aws cloudformation create-stack \
           --stack-name $STACK_NAME \
+          --template-body file://$TEMPLATE_FILE \
           --capabilities CAPABILITY_NAMED_IAM \
-          --no-fail-on-empty-changeset
+          --on-failure DELETE
+      - echo "Waiting for stack creation to complete..."
+      - aws cloudformation wait stack-create-complete --stack-name $STACK_NAME
+      - echo "Stack created successfully"
   post_build:
     commands:
       - echo "Deployment complete!"
@@ -46,13 +45,16 @@ phases:
         FINAL_STATUS=$(aws cloudformation describe-stacks --stack-name $STACK_NAME --query "Stacks[0].StackStatus" --output text 2>/dev/null || echo "UNKNOWN")
         echo "Final stack status: $FINAL_STATUS"
         
-        if [[ "$FINAL_STATUS" == *"COMPLETE"* ]] && [[ "$FINAL_STATUS" != *"ROLLBACK"* ]]; then
-          echo "✓ Stack deployment successful"
-          exit 0
-        else
-          echo "✗ Stack deployment failed or rolled back"
-          exit 1
-        fi
+        case "$FINAL_STATUS" in
+          CREATE_COMPLETE|UPDATE_COMPLETE)
+            echo "✓ Stack deployment successful"
+            exit 0
+            ;;
+          *)
+            echo "✗ Stack deployment failed with status: $FINAL_STATUS"
+            exit 1
+            ;;
+        esac
 artifacts:
   files:
     - '**/*'
