update template file

--- a/template.yml
+++ b/template.yml
@@ -92,7 +92,7 @@ Resources:
                 Version: 1
               Configuration:
                 Owner: Adityansh9109
-                Repo: AWS-Repo
+                Repo: codebuildgit
                 Branch: main
                 OAuthToken: "{{resolve:secretsmanager:myapp/github-token:SecretString:GITHUB_TOKEN}}"
               OutputArtifacts:
