--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,7 +1,7 @@
 version: 0.2
 env:
   variables:
-    APP_STACK_NAME: template16-10
+    APP_STACK_NAME: cloudformationtemplate16-10
     APP_TEMPLATE_FILE: template.yml
 phases:
   install:
